Working egui inputs and regen

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 [dependencies]
 bevy = { version = "0.17.2" }
 bevy_egui = "0.38.0"
+bevy_panorbit_camera = { version ="0.33.0", features=["bevy_egui"]}
 csgrs = { git = "https://github.com/sambskn/csgrs.git", branch="bump-geo", features=["bevymesh"] }
 geo = "0.31"
 geo-types = "0.7.17"
