--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,4 +22,4 @@ opt-level = "z"
 codegen-units = 1
 # Do a second optimization pass over the entire program, including dependencies.
 # Slows compile times, marginal improvements.
-lto = "thin"
+lto = true
